--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@
     box-sizing: border-box;
 }
 
+html {
+    max-width: 1366px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    max-width: ;
+}
+
 a {
     text-decoration: none;
     display: inline-block;
@@ -16,7 +26,8 @@ li {
 
 p,
 h1,
-h2 {
+h2,
+h3 {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -29,7 +40,7 @@ h2 {
 }
 
 .first__block {
-    padding: 63px 0px 23px;
+    padding: 63px 0px 19px;
     background-color: #f0e2e2;
     background-image: url("../img/slider-img.jpg");
     background-size: cover;
@@ -182,24 +193,171 @@ h2 {
 }
 
 .second__block {
-    display: flex;
-    max-width: 1366px;
-    height: 609px;
+    padding: 120px 0px 120px;
     background-color: #ffffff;
-    margin-top: 120px;
-
 }
 
 .second__block-top {
-    display: inline;
+    display: flex;
+    justify-content: space-between;
 }
+
+.small__title {
+    display: inline-block;
+    font-family: Montserrat;
+    font-size: 36px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #212121;
+    padding-left: 9px;
+    padding-right: 20px;
+    border-bottom: 3px solid #212121;
+}
+
+.small__title-faded {
+    display: inline-block;
+    font-family: Montserrat;
+    font-size: 36px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #6c6c6c;
+    margin-left: -4px;
+    border-bottom: 1px solid #6c6c6c;
+    padding-bottom: 0px 22px 2px 11px;
+}
+
+.right__btn {
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 24px;
+    letter-spacing: 3.6px;
+    text-align: center;
+    color: #212121;
+    text-transform: uppercase;
+    margin-bottom: 68px;
+}
+
+.right__btn:after {
+    content: url(../img/small__arrow.png);
+    padding-left: 12px;
+}
+
 
 .second__block-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.boxes {
+    width: 270px;
+    height: 270px;
+    display: inline-block;
+}
+
+.cube {
+    display: inline-block;
+    position: relative;
+    max-width: 270px;
+    height: 270px;
+}
+
+.inside__cube {
+    position: absolute;
+    left: 32px;
+    right: 32px;
+    bottom: 0px;
+    top: 32px;
+    width: 206px;
 
 }
 
-.second__block-content img {
-    width: 270px;
-    height: 270px;
+.middle__arrow {
+    margin-left: 19px;
+    margin-top: 15px;
+}
 
+.opacity {
+    opacity: 0.1;
+}
+
+.small__btn {
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+    box-shadow: 0px 2px 4.9px 0.2px rgba(33, 33, 33, 0.35);
+    background-color: #ffffff;
+    margin-left: 80px;
+
+}
+
+.box__text {
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 30px;
+    text-align: center;
+    color: #212121;
+    margin-top: 19px;
+}
+
+.box__text-small {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    text-align: center;
+    color: #6c6c6c;
+    max-width: 206px;
+    margin-top: 23px;
+}
+
+.regular__text-third {
+    max-width: 374px;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+    text-align: left;
+    color: #6c6c6c;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+}
+
+.first__chair {
+    background-image: url("../img/promo-img-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 683px;
+    position: relative;
+    display: inline-block;
+    width: 683px;
+}
+
+.second__chair {
+    background-image: url("../img/promo-img@3x.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 683px;
+    position: relative;
+    display: inline-block;
+    width: 683px;
+}
+
+.chairs__content {
+    margin-top: 228px;
+    margin-left: 50px;
 }
