--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,14 @@ body {
 a {
     text-decoration: none;
     display: inline-block;
+    color: coral;
 }
+
+a:hover {
+    color: coral;
+}
+
+
 
 ul,
 li {
@@ -79,7 +86,7 @@ h3 {
 }
 
 .menu__link:hover {
-    color: #212121;
+    color: coral;
 }
 
 .slider__content {
@@ -115,10 +122,7 @@ h3 {
     font-family: "Montserrat";
     font-size: 62px;
     font-weight: 100;
-    font-stretch: normal;
-    font-style: normal;
     line-height: 72px;
-    letter-spacing: normal;
     text-align: left;
     text-transform: uppercase;
     color: #212121;
@@ -276,7 +280,6 @@ h3 {
     bottom: 0px;
     top: 32px;
     width: 206px;
-
 }
 
 .middle__arrow {
@@ -349,7 +352,7 @@ h3 {
 }
 
 .second__chair {
-    background-image: url("../img/promo-img@3x.jpg");
+    background-image: url("../img/promo-img.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 683px;
@@ -410,52 +413,256 @@ h3 {
 
 .sixth__block {
     padding: 120px 0px 120px;
-    background-color: #f0e2e2;
-    
+    background-color: #ffffff;
+
 }
 
 .pillow__text {
-    /* background-image: url("../img/product-1-lg.jpg"); */
+    background-image: url("../img/product-1-lg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 570px;
-    display: inline-block;
     width: 570px;
     padding-top: 186px;
     padding-left: 31px;
-    margin-right: 30px;
 }
 
 .near__pillow {
     display: inline-block;
 }
-.test {
+
+.collapse {
     display: flex;
     margin: -15px;
-    overflow: auto;
     flex-wrap: wrap;
 }
 
-.test__child {
+.first__child {
     padding: 15px;
     flex: 1 0 50%;
-    
+
 }
-.test__child2 {
+
+.second__child {
     padding: 15px;
     flex: 1 0 25%;
 }
 
-.plw {
+.pillow__size {
     width: 570px;
     height: 570px;
 }
 
-.plw__color {
-    background-color: orange;
+.seventh__block {
+    background-image: url(../img/back-img.jpg);
+    padding: 125px 0px 120px;
 }
 
-.plw__small {
-    width: 270px;
-    height: 270px;
+.m__app-text {
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 48px;
+    letter-spacing: 1.8px;
+    text-align: left;
+    color: #6c6c6c;
+    text-transform: uppercase;
+}
+
+.largest__text-bottom {
+    width: 485px;
+    font-family: "Montserrat";
+    font-size: 62px;
+    font-weight: 100;
+    line-height: 72px;
+    text-align: left;
+    text-transform: uppercase;
+    color: #212121;
+    margin-bottom: 8px;
+    margin-left: 7px;
+}
+
+.sb__small-text {
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 24px;
+    text-align: left;
+    color: #6c6c6c;
+    margin-bottom: 6px;
+}
+
+.sb__content-img img {
+    object-fit: contain;
+    margin-right: 10px;
+    display: inline-block;
+}
+
+footer {
+    padding: 120px 0px 38px;
+    background-color: #ffffff;
+}
+
+.contact__us {
+    width: 225px;
+    display: inline-block;
+    margin-right: 80px;
+}
+
+.contact__us-text {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.57;
+    text-align: left;
+    color: #212121;
+}
+
+.useful__info {
+    width: 440px;
+    display: inline-block;
+}
+
+.second__info,
+.first__info {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 1.86;
+    letter-spacing: 0.7px;
+    text-align: left;
+    color: #212121;
+}
+
+
+.first__info {
+    width: 140px;
+    display: inline-block;
+    text-transform: uppercase;
+    margin-right: 102px;
+}
+
+.second__info {
+    width: 193px;
+    display: inline-block;
+    text-transform: uppercase;
+}
+
+.first__info p:hover {
+    color: coral;
+}
+
+
+.second__info p:hover {
+    color: coral;
+}
+
+
+
+
+.stay__in-touch {
+    width: 340px;
+    display: inline-block;
+}
+
+.stay__in-touch-text {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.57;
+    text-align: left;
+    color: #212121;
+    margin-bottom: 26px;
+}
+
+.footer__upper-text {
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    letter-spacing: 1.8px;
+    text-align: left;
+    color: #6c6c6c;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.email__subscribe {
+    width: 340px;
+    height: 48px;
+    border: solid 1px #d9dee1;
+    background-color: #ffffff;
+    margin-bottom: 59px;
+}
+
+.email__subscribe[placeholder] {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.57;
+    text-align: left;
+    color: #6c6c6c;
+    padding-left: 19px;
+}
+
+.input[placeholder] {
+    content: "\e900";
+    position: absolute;
+    right: 0;
+    font-family: 'icomoon' !important;
+    font-size: 22px;
+    line-height: 1;
+    color: #6c6c6c;
+}
+
+.copy {
+    font-family: Montserrat;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 2.17;
+    letter-spacing: 0.6px;
+    text-align: left;
+    color: #6c6c6c;
+    text-transform: uppercase;
+}
+
+.social {
+    width: 129px;
+    height: 28px;
+    font-family: icomoon;
+    font-size: 28px;
+    line-height: 0.93;
+    letter-spacing: 5.6px;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.fb:after {
+    content: "\e903";
+    font-family: 'icomoon' !important;
+    color: #6c6c6c;
+}
+
+.tw:after {
+    content: "\e902";
+    font-family: 'icomoon' !important;
+    color: #6c6c6c;
+}
+
+.google:after {
+    content: "\e904";
+    font-family: 'icomoon' !important;
+    color: #6c6c6c;
+}
+
+.pin:after {
+    content: "\e901";
+    font-family: 'icomoon' !important;
+    color: #6c6c6c;
 }
