--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,6 @@
     box-sizing: border-box;
 }
 
-html {
-    max-width: 1366px;
-}
 
 body {
     margin: 0;
@@ -13,16 +10,14 @@ body {
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
     display: inline-block;
     color: coral;
 }
 
 a:hover {
-    color: coral;
+    color: coral !important;
 }
-
-
 
 ul,
 li {
@@ -89,10 +84,14 @@ h3 {
     color: coral;
 }
 
+.magnifier:after {
+    content: url(../img/search.png);
+    padding-left: 15px;
+}
+
 .slider__content {
     margin-top: 283px;
 }
-
 
 .color__text {
     font-family: "Montserrat";
@@ -124,7 +123,6 @@ h3 {
     font-weight: 100;
     line-height: 72px;
     text-align: left;
-    text-transform: uppercase;
     color: #212121;
 }
 
@@ -557,9 +555,6 @@ footer {
     color: coral;
 }
 
-
-
-
 .stay__in-touch {
     width: 340px;
     display: inline-block;
@@ -665,4 +660,19 @@ footer {
     content: "\e901";
     font-family: 'icomoon' !important;
     color: #6c6c6c;
+}
+
+/* СSS for page contact.html */
+
+.first__contact {
+    background-color: #f5f5f5;
+    padding: 63px 0px 40px;
+}
+
+.inside__first-contact {
+    margin-top: 100px;
+}
+
+.contacts__main {
+    
 }
