--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?fyvx52');
-  src:  url('../fonts/icomoon.eot?fyvx52#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?fyvx52') format('truetype'),
-    url('../fonts/icomoon.woff?fyvx52') format('woff'),
-    url('../fonts/icomoon.svg?fyvx52#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?kbncon');
+  src:  url('../fonts/icomoon.eot?kbncon#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?kbncon') format('truetype'),
+    url('../fonts/icomoon.woff?kbncon') format('woff'),
+    url('../fonts/icomoon.svg?kbncon#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,18 +25,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-pinterest-with-circle:before {
-  content: "\e901";
-}
-.icon-twitter-with-circle:before {
-  content: "\e902";
-}
-.icon-facebook-with-circle:before {
-  content: "\e903";
-}
-.icon-google-with-circle:before {
-  content: "\e904";
+.icon-location-pin:before {
+  content: "\e900";
 }
 .icon-paper-plane:before {
-  content: "\e900";
+  content: "\e901";
+}
+.icon-text:before {
+  content: "\e906";
+}
+.icon-facebook-with-circle:before {
+  content: "\e902";
+}
+.icon-google-with-circle:before {
+  content: "\e903";
+}
+.icon-pinterest-with-circle:before {
+  content: "\e904";
+}
+.icon-twitter-with-circle:before {
+  content: "\e905";
 }
