--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ h3 {
     display: inline-block;
 }
 
-.collapse {
+.remove__paddings {
     display: flex;
     margin: -15px;
     flex-wrap: wrap;
@@ -753,4 +753,118 @@ footer {
     display: none;
     font-size: 28px;
     padding-right: 20px;
+}
+
+/* for item page */
+
+.navbar-collapse {
+    padding-left: 400px;
+}
+
+.justify-content-center {
+    background-color: #f4f4f4;
+    text-align: center;
+    height: 71px;
+}
+
+.justify-content-center a {
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 55px;
+    letter-spacing: 1.8px;
+    color: #6c6c6c;
+    text-align: center;
+}
+
+
+.justify-content-center .gray {
+    color: #212121;
+}
+
+.three__images {
+    text-align: center;
+}
+
+.three__images img {
+    padding-right: 10px;
+}
+
+.main__information {
+    margin-top: 70px;
+}
+
+.text__block {
+    margin-top: 47px;
+}
+
+.text__block p:nth-child(-n+3) {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.price {
+    font-family: 'Gotham';
+    font-size: 36px;
+    font-weight: 300;
+    line-height: 0.67;
+    letter-spacing: normal;
+    text-align: center;
+    color: #212121;
+}
+
+.price span {
+    font-size: 72px;
+}
+
+@font-face {
+    font-family: 'Gotham';
+    src: url('../fonts/GothamLight.ttf');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+.btn__item {
+    width: 510px;
+    height: 71px;
+    border-radius: 35px;
+    box-shadow: 0px 2px 4.9px 0.2px rgba(33, 33, 33, 0.35);
+    background-color: #f44336;
+    margin: 31px auto 49px;
+    text-align: center;
+}
+
+.btn__item-text {
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 1.09;
+    letter-spacing: 4.4px;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-top: 20px;
+}
+
+
+.btn__item-text:after {
+    content: url(../img/arrow.svg);
+    width: 9px;
+    height: 13px;
+    object-fit: contain;
+    padding-left: 22px;
+    filter: invert(100%) sepia(98%) saturate(6%) hue-rotate(147deg) brightness(100%) contrast(102%);
+}
+
+.a__lot-text {
+    font-family: Gotham;
+    font-size: 16px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: 0.4px;
+    text-align: left;
+    color: #212121;
+    padding-bottom: 5px;
 }
